// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EligibilityIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EligibilityIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      className="lucid-EligibilityIcon-half-circle"
      d="M6.98.928C3.51 1.424.844 4.398.844 8c0 3.604 2.666 6.576 6.133 7.072V.928z"
    />
    <path
      className="lucid-EligibilityIcon-half-circle"
      d="M9.022.928c3.465.496 6.133 3.47 6.133 7.072 0 3.604-2.668 6.576-6.133 7.072V.928z"
    />
  </g>
</Icon>
`;

exports[`EligibilityIcon [common] example testing should match snapshot(s) for 1.default 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EligibilityIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-is-selected"
      d="M6.98.928C3.51 1.424.844 4.398.844 8c0 3.604 2.666 6.576 6.133 7.072V.928z"
    />
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-is-selected"
      d="M9.022.928c3.465.496 6.133 3.47 6.133 7.072 0 3.604-2.668 6.576-6.133 7.072V.928z"
    />
  </g>
</Icon>
`;

exports[`EligibilityIcon [common] example testing should match snapshot(s) for 1.default 3`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EligibilityIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      className="lucid-EligibilityIcon-half-circle"
      d="M6.98.928C3.51 1.424.844 4.398.844 8c0 3.604 2.666 6.576 6.133 7.072V.928z"
    />
    <path
      className="lucid-EligibilityIcon-half-circle"
      d="M9.022.928c3.465.496 6.133 3.47 6.133 7.072 0 3.604-2.668 6.576-6.133 7.072V.928z"
    />
  </g>
</Icon>
`;

exports[`EligibilityIcon [common] example testing should match snapshot(s) for 1.default 4`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EligibilityIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-is-selected"
      d="M6.98.928C3.51 1.424.844 4.398.844 8c0 3.604 2.666 6.576 6.133 7.072V.928z"
    />
    <path
      className="lucid-EligibilityIcon-half-circle"
      d="M9.022.928c3.465.496 6.133 3.47 6.133 7.072 0 3.604-2.668 6.576-6.133 7.072V.928z"
    />
  </g>
</Icon>
`;

exports[`EligibilityIcon [common] example testing should match snapshot(s) for 1.default 5`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EligibilityIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      className="lucid-EligibilityIcon-half-circle"
      d="M6.98.928C3.51 1.424.844 4.398.844 8c0 3.604 2.666 6.576 6.133 7.072V.928z"
    />
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-is-selected"
      d="M9.022.928c3.465.496 6.133 3.47 6.133 7.072 0 3.604-2.668 6.576-6.133 7.072V.928z"
    />
  </g>
</Icon>
`;

exports[`EligibilityIcon [common] example testing should match snapshot(s) for 1.default 6`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EligibilityIcon"
  isBadge={true}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-is-selected"
      d="M6.98.928C3.51 1.424.844 4.398.844 8c0 3.604 2.666 6.576 6.133 7.072V.928z"
    />
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-is-selected"
      d="M9.022.928c3.465.496 6.133 3.47 6.133 7.072 0 3.604-2.668 6.576-6.133 7.072V.928z"
    />
  </g>
</Icon>
`;

exports[`EligibilityIcon [common] example testing should match snapshot(s) for 1.default 7`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EligibilityIcon"
  isBadge={true}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      className="lucid-EligibilityIcon-half-circle"
      d="M6.98.928C3.51 1.424.844 4.398.844 8c0 3.604 2.666 6.576 6.133 7.072V.928z"
    />
    <path
      className="lucid-EligibilityIcon-half-circle"
      d="M9.022.928c3.465.496 6.133 3.47 6.133 7.072 0 3.604-2.668 6.576-6.133 7.072V.928z"
    />
  </g>
</Icon>
`;

exports[`EligibilityIcon [common] example testing should match snapshot(s) for 1.default 8`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EligibilityIcon"
  isBadge={true}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-is-selected"
      d="M6.98.928C3.51 1.424.844 4.398.844 8c0 3.604 2.666 6.576 6.133 7.072V.928z"
    />
    <path
      className="lucid-EligibilityIcon-half-circle"
      d="M9.022.928c3.465.496 6.133 3.47 6.133 7.072 0 3.604-2.668 6.576-6.133 7.072V.928z"
    />
  </g>
</Icon>
`;

exports[`EligibilityIcon [common] example testing should match snapshot(s) for 1.default 9`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EligibilityIcon"
  isBadge={true}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      className="lucid-EligibilityIcon-half-circle"
      d="M6.98.928C3.51 1.424.844 4.398.844 8c0 3.604 2.666 6.576 6.133 7.072V.928z"
    />
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-is-selected"
      d="M9.022.928c3.465.496 6.133 3.47 6.133 7.072 0 3.604-2.668 6.576-6.133 7.072V.928z"
    />
  </g>
</Icon>
`;

exports[`EligibilityIcon [common] example testing should match snapshot(s) for 2.clickable 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EligibilityIcon"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      className="lucid-EligibilityIcon-half-circle"
      d="M6.98.928C3.51 1.424.844 4.398.844 8c0 3.604 2.666 6.576 6.133 7.072V.928z"
    />
    <path
      className="lucid-EligibilityIcon-half-circle"
      d="M9.022.928c3.465.496 6.133 3.47 6.133 7.072 0 3.604-2.668 6.576-6.133 7.072V.928z"
    />
  </g>
</Icon>
`;

exports[`EligibilityIcon [common] example testing should match snapshot(s) for 2.clickable 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EligibilityIcon"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-is-selected"
      d="M6.98.928C3.51 1.424.844 4.398.844 8c0 3.604 2.666 6.576 6.133 7.072V.928z"
    />
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-is-selected"
      d="M9.022.928c3.465.496 6.133 3.47 6.133 7.072 0 3.604-2.668 6.576-6.133 7.072V.928z"
    />
  </g>
</Icon>
`;

exports[`EligibilityIcon [common] example testing should match snapshot(s) for 2.clickable 3`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EligibilityIcon"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      className="lucid-EligibilityIcon-half-circle"
      d="M6.98.928C3.51 1.424.844 4.398.844 8c0 3.604 2.666 6.576 6.133 7.072V.928z"
    />
    <path
      className="lucid-EligibilityIcon-half-circle"
      d="M9.022.928c3.465.496 6.133 3.47 6.133 7.072 0 3.604-2.668 6.576-6.133 7.072V.928z"
    />
  </g>
</Icon>
`;

exports[`EligibilityIcon [common] example testing should match snapshot(s) for 2.clickable 4`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EligibilityIcon"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-is-selected"
      d="M6.98.928C3.51 1.424.844 4.398.844 8c0 3.604 2.666 6.576 6.133 7.072V.928z"
    />
    <path
      className="lucid-EligibilityIcon-half-circle"
      d="M9.022.928c3.465.496 6.133 3.47 6.133 7.072 0 3.604-2.668 6.576-6.133 7.072V.928z"
    />
  </g>
</Icon>
`;

exports[`EligibilityIcon [common] example testing should match snapshot(s) for 2.clickable 5`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EligibilityIcon"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      className="lucid-EligibilityIcon-half-circle"
      d="M6.98.928C3.51 1.424.844 4.398.844 8c0 3.604 2.666 6.576 6.133 7.072V.928z"
    />
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-is-selected"
      d="M9.022.928c3.465.496 6.133 3.47 6.133 7.072 0 3.604-2.668 6.576-6.133 7.072V.928z"
    />
  </g>
</Icon>
`;

exports[`EligibilityIcon [common] example testing should match snapshot(s) for 2.clickable 6`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EligibilityIcon"
  isBadge={true}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-is-selected"
      d="M6.98.928C3.51 1.424.844 4.398.844 8c0 3.604 2.666 6.576 6.133 7.072V.928z"
    />
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-is-selected"
      d="M9.022.928c3.465.496 6.133 3.47 6.133 7.072 0 3.604-2.668 6.576-6.133 7.072V.928z"
    />
  </g>
</Icon>
`;

exports[`EligibilityIcon [common] example testing should match snapshot(s) for 2.clickable 7`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EligibilityIcon"
  isBadge={true}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      className="lucid-EligibilityIcon-half-circle"
      d="M6.98.928C3.51 1.424.844 4.398.844 8c0 3.604 2.666 6.576 6.133 7.072V.928z"
    />
    <path
      className="lucid-EligibilityIcon-half-circle"
      d="M9.022.928c3.465.496 6.133 3.47 6.133 7.072 0 3.604-2.668 6.576-6.133 7.072V.928z"
    />
  </g>
</Icon>
`;

exports[`EligibilityIcon [common] example testing should match snapshot(s) for 2.clickable 8`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EligibilityIcon"
  isBadge={true}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-is-selected"
      d="M6.98.928C3.51 1.424.844 4.398.844 8c0 3.604 2.666 6.576 6.133 7.072V.928z"
    />
    <path
      className="lucid-EligibilityIcon-half-circle"
      d="M9.022.928c3.465.496 6.133 3.47 6.133 7.072 0 3.604-2.668 6.576-6.133 7.072V.928z"
    />
  </g>
</Icon>
`;

exports[`EligibilityIcon [common] example testing should match snapshot(s) for 2.clickable 9`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EligibilityIcon"
  isBadge={true}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      className="lucid-EligibilityIcon-half-circle"
      d="M6.98.928C3.51 1.424.844 4.398.844 8c0 3.604 2.666 6.576 6.133 7.072V.928z"
    />
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-is-selected"
      d="M9.022.928c3.465.496 6.133 3.47 6.133 7.072 0 3.604-2.668 6.576-6.133 7.072V.928z"
    />
  </g>
</Icon>
`;

exports[`EligibilityIcon [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EligibilityIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-half-circle-is-disabled"
      d="M6.98.928C3.51 1.424.844 4.398.844 8c0 3.604 2.666 6.576 6.133 7.072V.928z"
    />
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-half-circle-is-disabled"
      d="M9.022.928c3.465.496 6.133 3.47 6.133 7.072 0 3.604-2.668 6.576-6.133 7.072V.928z"
    />
  </g>
</Icon>
`;

exports[`EligibilityIcon [common] example testing should match snapshot(s) for 3.disabled 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EligibilityIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-is-selected lucid-EligibilityIcon-half-circle-is-disabled"
      d="M6.98.928C3.51 1.424.844 4.398.844 8c0 3.604 2.666 6.576 6.133 7.072V.928z"
    />
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-is-selected lucid-EligibilityIcon-half-circle-is-disabled"
      d="M9.022.928c3.465.496 6.133 3.47 6.133 7.072 0 3.604-2.668 6.576-6.133 7.072V.928z"
    />
  </g>
</Icon>
`;

exports[`EligibilityIcon [common] example testing should match snapshot(s) for 3.disabled 3`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EligibilityIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-half-circle-is-disabled"
      d="M6.98.928C3.51 1.424.844 4.398.844 8c0 3.604 2.666 6.576 6.133 7.072V.928z"
    />
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-half-circle-is-disabled"
      d="M9.022.928c3.465.496 6.133 3.47 6.133 7.072 0 3.604-2.668 6.576-6.133 7.072V.928z"
    />
  </g>
</Icon>
`;

exports[`EligibilityIcon [common] example testing should match snapshot(s) for 3.disabled 4`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EligibilityIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-is-selected lucid-EligibilityIcon-half-circle-is-disabled"
      d="M6.98.928C3.51 1.424.844 4.398.844 8c0 3.604 2.666 6.576 6.133 7.072V.928z"
    />
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-half-circle-is-disabled"
      d="M9.022.928c3.465.496 6.133 3.47 6.133 7.072 0 3.604-2.668 6.576-6.133 7.072V.928z"
    />
  </g>
</Icon>
`;

exports[`EligibilityIcon [common] example testing should match snapshot(s) for 3.disabled 5`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EligibilityIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-half-circle-is-disabled"
      d="M6.98.928C3.51 1.424.844 4.398.844 8c0 3.604 2.666 6.576 6.133 7.072V.928z"
    />
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-is-selected lucid-EligibilityIcon-half-circle-is-disabled"
      d="M9.022.928c3.465.496 6.133 3.47 6.133 7.072 0 3.604-2.668 6.576-6.133 7.072V.928z"
    />
  </g>
</Icon>
`;

exports[`EligibilityIcon [common] example testing should match snapshot(s) for 3.disabled 6`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EligibilityIcon"
  isBadge={true}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-is-selected lucid-EligibilityIcon-half-circle-is-disabled"
      d="M6.98.928C3.51 1.424.844 4.398.844 8c0 3.604 2.666 6.576 6.133 7.072V.928z"
    />
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-is-selected lucid-EligibilityIcon-half-circle-is-disabled"
      d="M9.022.928c3.465.496 6.133 3.47 6.133 7.072 0 3.604-2.668 6.576-6.133 7.072V.928z"
    />
  </g>
</Icon>
`;

exports[`EligibilityIcon [common] example testing should match snapshot(s) for 3.disabled 7`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EligibilityIcon"
  isBadge={true}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-half-circle-is-disabled"
      d="M6.98.928C3.51 1.424.844 4.398.844 8c0 3.604 2.666 6.576 6.133 7.072V.928z"
    />
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-half-circle-is-disabled"
      d="M9.022.928c3.465.496 6.133 3.47 6.133 7.072 0 3.604-2.668 6.576-6.133 7.072V.928z"
    />
  </g>
</Icon>
`;

exports[`EligibilityIcon [common] example testing should match snapshot(s) for 3.disabled 8`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EligibilityIcon"
  isBadge={true}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-is-selected lucid-EligibilityIcon-half-circle-is-disabled"
      d="M6.98.928C3.51 1.424.844 4.398.844 8c0 3.604 2.666 6.576 6.133 7.072V.928z"
    />
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-half-circle-is-disabled"
      d="M9.022.928c3.465.496 6.133 3.47 6.133 7.072 0 3.604-2.668 6.576-6.133 7.072V.928z"
    />
  </g>
</Icon>
`;

exports[`EligibilityIcon [common] example testing should match snapshot(s) for 3.disabled 9`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EligibilityIcon"
  isBadge={true}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-half-circle-is-disabled"
      d="M6.98.928C3.51 1.424.844 4.398.844 8c0 3.604 2.666 6.576 6.133 7.072V.928z"
    />
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-is-selected lucid-EligibilityIcon-half-circle-is-disabled"
      d="M9.022.928c3.465.496 6.133 3.47 6.133 7.072 0 3.604-2.668 6.576-6.133 7.072V.928z"
    />
  </g>
</Icon>
`;
